tests/baselines/reference/topLevelLambda4.errors.txt
tests/cases/compiler/topLevelLambda4.ts(1,22): error TS2532: 'this' is possibly 'undefined'.


==== tests/cases/compiler/topLevelLambda4.ts (1 errors) ====
    export var x = () => this.window;
                         ~~~~
!!! error TS2532: 'this' is possibly 'undefined'.